2008-01-09 Joao S. O. Bueno <gwidion@mpc.com.br>

        * plug-ins/pygimp/pygimp-vectors.c: Allow Vectors.remove_stroke
	method to accept VectorStroke objects besides stroke IDs. Fix
	method names in error strings.

2008-01-09  Michael Natterer  <mitch@gimp.org>

	* modules/cdisplay_colorblind.c
	* modules/cdisplay_gamma.c
	* modules/cdisplay_highcontrast.c
	* modules/cdisplay_lcms.c
	* modules/cdisplay_proof.c
	* modules/colorsel_cmyk.c
	* modules/colorsel_triangle.c
	* modules/colorsel_water.c
	* modules/controller_dx_dinput.c
	* modules/controller_linux_input.c
	* modules/controller_midi.c: use G_DEFINE_DYNAMIC_TYPE() instead
	of boilerplate code.

2008-01-09  Sven Neumann  <sven@gimp.org>

	* modules/colorsel_cmyk_lcms.c (colorsel_cmyk_class_init): don't
	abort on errors in lcms.

2008-01-09  Sven Neumann  <sven@gimp.org>

	* app/gegl/gimpoperationtilesink.c: use the marshaller from GLib;
	don't include gimpmarshal.h from app/core.

2008-01-09  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimplevelstool.c (gimp_levels_tool_map): fix alpha
	handling on greyscale images.

2008-01-09  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/convmatrix.c (convolve_image): round the result
	of the convolution. Fixes bug #508114.

2008-01-09  Michael Natterer  <mitch@gimp.org>

	* app/core/core-types.h: add typedef GimpImageMapApplyFunc here.

	* app/core/gimpimagemap.[ch] (gimp_image_map_new): add apply_func
	and apply_data parameters.

	(gimp_image_map_apply): remove them here and add a GeglRectangle
	parameter which is the visible area of the affected drawable.

	* app/tools/gimpimagemaptool.[ch]: keep apply_func and apply_data
	around in the GimpImageMapTool struct.

	(gimp_image_map_tool_create_map): pass them to gimp_image_map_new().

	(gimp_image_map_tool_map): call gimp_image_map_apply() here and
	pass the drawable's visible rectangle.

	* app/tools/gimpbrightnesscontrasttool.c
	* app/tools/gimpcolorbalancetool.c
	* app/tools/gimpcolorizetool.c